# cursivext

./: Cargo.toml
.cargo/: config.toml
docs/: Readme.md
src/: lib.rs
src/views/: checkbox.rs  mod.rs  tabs.rs
tests/: doc.rs
